--- a/leadership_across_cultures_contexts.Rmd
+++ b/leadership_across_cultures_contexts.Rmd
@@ -4,11 +4,13 @@ author: "Zachary Garfield, Kristen Syme, and Edward Hagen"
 date: "4/25/2019"
 output: 
   bookdown::html_document2
-bibliography: Leader_contexts.bib
+bibliography: Leader2.bib
 ---
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
+load("Leader2.Rdata")
+library(pander)
 ```
 
 
@@ -27,16 +29,26 @@ Leadership in WEIRD settings often differs substantially from non-WEIRD settings
 
 >It's good to be king, if just for a while. - Tom Petty
 
-Across human societies, the influence of leaders stands to substantially shape the nature of group structure and group outcomes. Simultaneously, social norms, pressures from competing leaders or rival or cooperative groups, as well as follower preferences can greatly constrain a leader's agenda. This interaction between the strategies of individual leaders with cultural forces and group dynamics they likely play an out-sized role in contributing to organizational variation including social and economic trajectories of populations [@wiessner_risk_1982], and cultural evolutionary processes [@henrich_big_2015]. Leadership and followership are critical in understanding group structure and have been the focus of much scienfitic attention across psychology, sociology, political science, and managerial studies. Until recently, this very large body of work was relatively disconnected from approaches to leadership in anthropology and biology. Under a unifying evolutionary framework, social and biological scientits have now produced to a sizble body of theory on the evolution and cross-culural patterning of leadership and followership [e.g., CITE], accomanyed by a growing body of empirical results [e.g., CITE]. This approach as been informative. Drawing on the study of leadership across diverse, small-scale and tradiational societies can help develop more generalizable theories and offer applications to shape ogranizational structure in ways which are more consistent with human evolutionary history and evolved leader-follower psychologies [@von_rueden_leadership_2015]. Nonetheless, much of this work has focused on community or political leaders, often overlooking the nature of leadership and followership across social domains. Moreover, while the benefits leaders acrue for their services have recieved substantial attention the costs of leadership for both leaders and followers have also been relatively underinvestigated.
+Across human societies, the influence of leaders stands to substantially shape the nature of group structure and group outcomes. Simultaneously, social norms, pressures from competing leaders or rival or cooperative groups, and followers preferences can greatly constrain a leader's agenda. The interactions between the strategies of individual leaders, pressures of followership, and cultural forces and group dynamics likely play an out-sized role in contributing to organizational variation across human populations including social and economic trajectories of populations [@wiessner_risk_1982], and cultural evolutionary processes [@henrich_big_2015]. Leadership and followership are critical in understanding group structure and have been the focus of much scientific attention across psychology, sociology, political science, and managerial studies. Until recently, this very large body of work was relatively disconnected from approaches to leadership in anthropology and biology. Under a unifying evolutionary framework, social and biological scientists have now produced to a sizable body of theory on the evolution and cross-cultural patterning of leadership and followership [e.g., CITE], accompanied by a growing body of empirical results [e.g., CITE]. This approach as been informative. Drawing on the study of leadership across diverse, small-scale and traditional societies can help develop more generalizable theories and offer applications to shape organizational structure in ways which are more consistent with human evolutionary history and evolved leader-follower psychologies [@von_rueden_leadership_2015]. Nonetheless, much of this work has focused on community or political leaders, often overlooking the nature of leadership and followership across social domains. Moreover, while the benefits leaders accrue for their services have received substantial attention the costs of leadership for both leaders and followers have also been relatively under-investigated.
 
 Leaders are individuals who maintain disproportionate influence over decision-making within groups [@von_rueden_leadership_2015], whatever the group may be. Leadership roles are also often associated with specific rights and responsibilities. Not surprisingly, the functions leaders serve then are often closely linked to group contexts and the challenges specific groups face. Certain types of groups, such as kin groups, economic groups, or political groups, may tend to favor certain types of leaders, however there can be substantial variation in the qualities of leaders within these groups as well as and between them.
 
 
 <!-- Reference a historical example of a short term leader implimenting change with lasting effects, good and/or bad. -->
 
-## The qualities of leaders across cultures and contexts
-
 ## The functions of leadership across cultures and contexts
+
+The emergence of leadership and the functions leaders serve across cultures is closely tied to social and political structure. Among ethnographically described small-scale societies which generally lack multi-level, institutionalized social and political structures, leadership at the community level is typically informal and ephemeral and tends to emerge contextually when demands of coordination or conflict resolution require a managerial presence [@von_rueden_leadership_2015]. Leaders in such contexts often draw on persuasive capacities and leverage community-based respect, their greater knowledge and social support to express their influence. The theoretical and ethnographic literature suggests these demands most commonly arise in the contexts of conflict resolution and collective actions. Demands of mediation in within-group conflict resolution, although variable in scale, are probably a universal feature of human groups. Demands of between-group interactions, including both conflict and cooperation are also very common across small-scale societies, including hunter-gatherers. Representing the group and managing both internal and external relationships and conflicts are expected to be the most salient functions of community leaders. 
+
+Within communities, leaders may emerge whenever groups of individuals form. The role of leaders in ritual contexts, such as in initiations, and in providing social services, including facilitating marriages and organizing social activities, are also relatively common. 
+
+Increased sedentarization and defensibility of resources is often associated with both social stratification and an institutionalized managerial role of community leaders. Among horticulturalists and agriculturalists managerial leadership can promote for more efficient use of shared resources such as water reserves and cooperative labor. Pastoralists and coastal populations can face similar pressures surrounding grazing lands and fishing access. In the wake of economic intensification, the function of leadership becomes increasing associated with the distribution of resources.
+
+Defensibility of resources is also often associated with increased territoriality and increased pressures of inter-group conflicts. Community leaders among populations more reliant on domesticated plant foods, livestock, and specific territory are often forced to manage military forces and develop offensive and defensive strategies in warfare, more so than mobile populations. 
+
+
+
+## The qualities of leaders across cultures and contexts
 
 ## The costs of leadership across cultures and contexts
 
@@ -44,8 +56,20 @@ Leaders are individuals who maintain disproportionate influence over decision-ma
 
 The ability to shape group dynamics can provide enormous individual benefits to leaders, even if 'just for a while.' 
 
+# Study aims
+
+Evolutionary theoretical models and empirical studies often seek to integrate findings within a broad framework of human cultural diversity. The universality of human leadership systems and the incredible diversity among the qualities of leaders across cultures and context and the functions they serve is difficult to capture. Scholars are then left to haphazardly self-select ethnographic cases or rely on the self-selected reviews of others. Here, we seek provide the first broad near comprehensive view of the qualities and functions of leaders across from a representative cross-cultural sample. 
+
 
 # Methods
+
+## Ethnographic sample and coding
+
+We evaluate the cross-cultural frequency in the functions and qualities of leaders and the costs and benefits of leadership for both leaders and followers using an ethnographic database previously built and published (doi.org/10.5281/zenodo.2541999), from which CITE "tested" three theoretical models against the ethnographic record. Whereas CITE, documented supporting evidence in respect to influential theoretical models and offered direction for novel theoretical synthesis, our goals here are to let the ethnographic record speak for itself in understanding variation in the dimensions of leadership we are interested in. 
+
+Using the same database of 1212 ethnographic paragraphs extracted from the 60-culture Probability Sample Files (PSF) of the electronic Human Relations Area Files (eHRAF) database. The leadershipdata was designed to capture a wide sample of the ethnographic record of leadership. Two authors coded each paragraph for presence of `r length(quality_vars)` distinct qualities of leaders, `r length(function_vars)` distinct functions leaders serve, and `r length(leader_benefit_vars)` benefits and `r length(leader_cost_vars)` costs that leader or followers may receive. Cost and benefits were operationalized prior to coding following our reading of the evolutionary leadership literature. See Table X. The operationalized qualities and functions (See Table X) were developed from the ethnographic text records in the database. First ZG read a subset of text records and developed initial variable lists and operationalizations of the qualities and functions in those text records. Then, KS coded all 1212 text records (in a random order) for the operationalized qualities, functions, cost, and benefits, **creating new variables and operationalizations for additional qualities and functions encountered**. After coding half of the random sample KS and ZG revised the operational definitions to produce the final list of variables in Tables XX. ZG then followed the same process of coding the entire sample of 1212 text records for the X operationalized variables. DISCUSS IRR. ZG and KS then discussed every instance of disagreement between their respective coding to produce a consensus matrix, which is used in the analyses here and added to the published data repository. For additional details on ethnographic sampling and creating of the leadershipdata package see CITE. 
+
+## Statistical analysis
 
 # Results
 
