--- a/Leader2.bib
+++ b/Leader2.bib
@@ -1,4 +1,14 @@
 
+  @TechReport{logisticPCA,
+    title = {Dimensionality Reduction for Binary Data through the
+      Projection of Natural Parameters},
+    author = {Andrew J. Landgraf and Yoonkyung Lee},
+    institution = {Department of Statistics, The Ohio State
+      University},
+    year = {2015},
+    number = {890},
+    url = {http://arxiv.org/abs/1510.06112},
+  }
 
 @article{dukas_animal_2018,
 	title = {Animal expertise: mechanisms, ecology and evolution},
