--- a/leadership_across_cultures_contexts.Rmd
+++ b/leadership_across_cultures_contexts.Rmd
@@ -54,16 +54,16 @@ Defensibility of resources is also often associated with increased territorialit
 
 In WEIRD societies, community leaders are primarily heads of governmental and corporate bodies with specific responsibilities and functions associated with their position. The structure of these organizations are generally organized hierarchically with nested bodies and a formal internal 'chain of command.' At the higher levels of large-scale organizations, leaders primarily serve as representatives in inter-group interactions, facilitate the creation and adoption of policies, and serve as a figure head embodying the strategic vision of the organization. They are not often involved in resolving immediate conflicts, such as disputes between individuals or nested bodies, however, they are often the final end-point in a decision making hierarchy and the results of a single decision of these leaders can trickle down through industry or government with global ramifications. 
 
-The Global Leadership and Organizational Behavior Effectivensss (GLOBE) project is a large-scale international research program aimed at understanding leadership effectiveness and culturla variation across large organizations. The GLOBE project has produced multiple cross-national datasets on leadership and hundreds of publications. For example, *The GLOBE Study of CEO Leadership Behavior and Effectiveness in 24 Countries* draws on data from over 1,000 CEOs and over 5,000 senior executives from corporations in varied of industries across 24 countries. The goals of the GLOBE CEO Study were to address (1) how natioanl culture influences expectations for hte behaviors of leaders, (2) which behaviors of CEOs are typically associated with organizational success, (3) differences between high-functioning adn low-functionsing CEOs, adn (4) the importance of CEO behaviors aligning with societal expectations. Through path analysis the study concluded that culturla values indirectly predict CEO leadership behavior through culturally endorsed leadership expectations. That is, leaders moderate their behavior through culturally learned values and leadership-specific values.  
+The Global Leadership and Organizational Behavior Effectiveness (GLOBE) project is a large-scale international research program aimed at understanding leadership effectiveness and cultural variation across large organizations. The GLOBE project has produced multiple cross-national data sets on leadership and hundreds of publications. For example, *The GLOBE Study of CEO Leadership Behavior and Effectiveness in 24 Countries* draws on data from over 1,000 CEOs and over 5,000 senior executives from corporations in varied of industries across 24 countries. The goals of the GLOBE CEO Study were to address (1) how national culture influences expectations for the behaviors of leaders, (2) which behaviors of CEOs are typically associated with organizational success, (3) differences between high-functioning and low-functioning CEOs, and (4) the importance of CEO behaviors aligning with societal expectations. Through path analysis the study concluded that cultural values indirectly predict CEO leadership behavior through culturally endorsed leadership expectations. That is, leaders moderate their behavior through culturally learned values and leadership-specific values.  
 
-The GLOBE CEO Study defines six "global leadership behaviors" developed from 21 "primary leadership beaviors." Among the global leadership behaviors, the GLOBE CEO STudy found that charimatic leadership beahvior is consistently the most important behavioral trait regarding firm performance and dedication of top managemnet team (TMT) members, followed by team-oriented behavior and human-oritented behavior. Participative leadership was moderately related to TMT dedication, however was not related to firm performance. The most successful CEOs are those who are rated as more visonary, performance oriented, and decisve. Furthermore, results strongly suggest the fit between a CEOs beahavioral profile and the expectations of leadership within a society strongly predict TMT dedication and firm performance. 
+The GLOBE CEO Study defines six "global leadership behaviors" developed from 21 "primary leadership behaviors." Among the global leadership behaviors, the GLOBE CEO Study found that charismatic leadership behavior is consistently the most important behavioral trait regarding firm performance and dedication of top management team (TMT) members, followed by team-oriented behavior and human-oriented behavior. Participative leadership was moderately related to TMT dedication, however was not related to firm performance. The most successful CEOs are those who are rated as more visionary, performance oriented, and decisive. Furthermore, results strongly suggest the fit between a CEOs behavioral profile and the expectations of leadership within a society strongly predict TMT dedication and firm performance. 
 
 
 ## The qualities of leaders across cultures and contexts
 
-Despite eminse variation, there do seem to be some commonalities among the qualities of community leaders. Across human societies, when strong community leaders exist, they tend to be high status males who embody the ideal qualities most respected by the group and necessary for successful leadership in the domains in which they have differential influence. Elders, respected individuals, and highly intelligent or knowledgeable individuals tend to have increased influence over community decisions across cultures, including among the most egalitarian hunter-gatherers, stratified chiefdoms, and contemporary state-level organizations. 
+Despite immense variation, there do seem to be some commonalities among the qualities of community leaders. Across human societies, when strong community leaders exist, they tend to be high status males who embody the ideal qualities most respected by the group and necessary for successful leadership in the domains in which they have differential influence. Elders, respected individuals, and highly intelligent or knowledgeable individuals tend to have increased influence over community decisions across cultures, including among the most egalitarian hunter-gatherers, stratified chiefdoms, and contemporary state-level organizations. 
 
-Among small-scale socities with relative egalitarianism and local political autonomy coomunity leaders, in addition to being older, respected males, tend to be individuals with large social networks and strong social support. Physically, leaders across multiple contexts tend to be taller and more physically formidable. Such physical embodiments might equip individuals for more eefective leadership in the context of inter-group conflicts as well as in the context of intra-group dispute settlement and in management of collective actions. Charisma and oratory skills are common properties of leaders, but are espeically important in the context of egalitarianism where individual leaders must rely on persuassion and more subtle forms of influence to convince community members to come to agreement. 
+Among small-scale societies with relative egalitarianism and local political autonomy community leaders, in addition to being older, respected males, tend to be individuals with large social networks and strong social support. Physically, leaders across multiple contexts tend to be taller and more physically formidable. Such physical embodiment might equip individuals for more effective leadership in the context of inter-group conflicts as well as in the context of intra-group dispute settlement and in management of collective actions. Charisma and oratory skills are common properties of leaders, but are especially important in the context of egalitarianism where individual leaders must rely on persuasion and more subtle forms of influence to convince community members to come to agreement. 
 
 
 
@@ -76,19 +76,19 @@ Among small-scale socities with relative egalitarianism and local political auto
 
 The ability to shape group dynamics can provide enormous individual benefits to leaders, even if 'just for a while.' Fundamentally, leaders in any context are able to promote group policies which either align with their individual interests or which are not especially costly for themselves.
 
-Across diverse populations and organizations, community leaders, political leaders, and organization leaders tend to have greater mating oppurtunities and therefore, given the aformentioned male-biase in top leadership positions, these leaders also tend to have greater reproductive success. 
+Across diverse populations and organizations, community leaders, political leaders, and organization leaders tend to have greater mating opportunities and therefore, given the aforementioned male-bias in top leadership positions, these leaders also tend to have greater reproductive success. 
 
-Instituionalized leadership positions are also typically associated with increased social status. 
+Institutionalized leadership positions are also typically associated with increased social status. 
 
-Leaders and high-status individuals are also more likely to be the recipeints of social support and material benefits in times of need. 
+Leaders and high-status individuals are also more likely to be the recipients of social support and material benefits in times of need. 
 
 
 
 ## The costs of leadership across cultures and contexts
 
-The unique costs associated with leadership positions have recieved less attention, relative to the benefits of leadership. 
+The unique costs associated with leadership positions have received less attention, relative to the benefits of leadership. 
 
-Group responsibilities necessarily impose oppurtunity costs on individual priorities and agendas. 
+Group responsibilities necessarily impose opportunity costs on individual priorities and agendas. 
 
 In managing collective action and enacting group-level policies, some behaviors of leaders will upset some followers and leader-follower interactions can be hostile. 
 
@@ -104,45 +104,71 @@ Evolutionary theoretical models and empirical studies often seek to integrate fi
 
 ## Ethnographic sample and coding
 
-We evaluate the cross-cultural frequency in the functions and qualities of leaders and the costs and benefits of leadership for both leaders and followers using an ethnographic database previously built and published (doi.org/10.5281/zenodo.2541999), from which CITE "tested" three theoretical models against the ethnographic record. Whereas CITE, documented supporting evidence in respect to influential theoretical models and offered direction for novel theoretical synthesis, our goals here are to let the ethnographic record speak for itself in understanding variation in the dimensions of leadership we are interested in. 
+We evaluate the cross-cultural frequency in the functions and qualities of leaders and the costs and benefits of leadership for both leaders and followers using an ethnographic database previously built and published (doi.org/10.5281/zenodo.2541999), from which @garfield_evolutionary_2019 "tested" three theoretical models against the ethnographic record. Whereas @garfield_evolutionary_2019, documented supporting evidence in reference to influential theoretical models, our goals here are to let the ethnographic record speak for itself in understanding variation in the dimensions of leadership we are interested in, i.e., our methods and analyses are exploratory and not tricly theoretically driven. 
 
-Using the same database of 1212 ethnographic paragraphs (termed text-records) extracted from the 60-culture Probability Sample Files (PSF) of the electronic Human Relations Area Files (eHRAF) database. The leadershipdata was designed to capture a wide sample of the ethnographic record of leadership. Two authors coded each paragraph for presence of `r length(quality_vars)` distinct qualities of leaders, `r length(function_vars)` distinct functions leaders serve, and `r length(leader_benefit_vars)` benefits and `r length(leader_cost_vars)` costs that leader or followers may receive. Cost and benefits were operationalized prior to coding following our reading of the evolutionary leadership literature. See Table X. The operationalized qualities and functions (See Table X) were developed from the ethnographic text records in the database. First ZG read a subset of text records and developed initial variable lists and operationalizations of the qualities and functions in those text records. Then, KS coded all 1212 text records (in a random order) for the operationalized qualities, functions, cost, and benefits, **creating new variables and operationalizations for additional qualities and functions encountered**. After coding half of the random sample KS and ZG revised the operational definitions to produce the final list of variables in Tables XX. ZG then followed the same process of coding the entire sample of 1212 text records for the X operationalized variables. DISCUSS IRR. ZG and KS then discussed every instance of disagreement between their respective coding to produce a consensus matrix, which is used in the analyses here and added to the published data repository. For additional details on ethnographic sampling and creating of the leadershipdata package see CITE. 
+Here we draw on the same database of 1212 ethnographic paragraphs (termed text records) extracted from the 60-culture Probability Sample Files (PSF) of the electronic Human Relations Area Files (eHRAF) database [@naroll_proposed_1967]. The leadershipdata database was designed to capture a wide sample of the ethnographic record of leadership. For the current study, two authors coded each paragraph for presence of `r length(quality_vars)` distinct qualities of leaders, `r length(function_vars)` distinct functions leaders serve, and `r length(leader_benefit_vars)` benefits and `r length(leader_cost_vars)` costs that leaders or followers may receive. 
 
 
+The operationalized qualities and functions (See Table X) were developed from the ethnographic text records in the database. First ZG read a subset of text records and developed initial variable lists and operationalizations of the qualities and functions in those text records. Then, KS coded all 1212 text records (in a random order) for the operationalized qualities, functions, cost, and benefits, creating new variables and operationalizations for additional qualities and functions encountered. After coding half of the random sample KS and ZG revised the operational definitions to produce the final list of variables in Tables X. ZG then followed the same process of coding the entire sample of 1212 text records for the X operationalized variables. DISCUSS IRR. ZG and KS then discussed every instance of disagreement between their respective coding to produce a consensus matrix, which is used in the analyses here and added to the published data repository. 
+
+Coding operationalizations of the costs and benefits of leadership were eveloped *a priori* based on our reading of the evolutionary theoretical literature from anthropology and biology. For both followers and leaders, we code if there is evidence of costs or benefits in the following categories: social status/reputation, reduced or increased risk of harm or conflict, social services, territory, mating, fitness, food resources, other resources, and other costs or benefits not captured by these categories. See Table X. 
+
+For additional details on ethnographic sampling and creating of the leadershipdata package see CITE. 
 
 ## Statistical analysis
 
-We analyze data from our researcher-coded operationalized variables at the text record level and at the culture level. Our first goal was to assess the proportion of text records and cultures that provided evidence for each of our coded variables. 
+We analyze data from our researcher-coded operationalized variables at the text-record level and at the culture-level. Our first goal was to assess the proportion of text records and cultures that provided evidence for each of our coded variables to illustrate the dimensions of leadership (e.g., the qualities, functions, costs and benefits) which are most frequent cross-culturally, in the ethnographic record.  
 
 <!-- At the text record level, hierarchical cluster analysis was then used to identify natural groupings of all our coded variables. If variables from a model clustered together, and separately from the other variables, that would lend support to the theoretical cohesiveness of that model. If, on the other hand, variables from different models clustered together, that would suggest theoretical models may need revision or that clusters had identified components of a novel theoretical model.  -->
 
 
-To reduce the dimensionality of the `r length(quality_vars)` quality variables and the `r length(function_vars)` we relied on logistic PCA from the Binary Dimensionality Reduction (logisticPCA) package CITE. 
+To reduce the dimensionality of the `r length(quality_vars)` quality variables and the `r length(function_vars)` we relied on logistic PCA from the Binary Dimensionality Reduction (logisticPCA) package [@logisticPCA]. We specify a $k = 3$ rank solution *a priori* and set $m$ (the value to approximate the saturated model) using cross-validation. Results from logistic PCA stand to (1) reveal which measures (coded variables) distinguish leaders and (2) produce a quantitiave measure of leader qualities and leader functions for additional exploratory analyses. 
 
 
 # Results
 
-The geographic distribution of the cultures in our sample is displayed in Fig. 1, with cultures labeled by mode of subsistence and represented by a symbol proportional to the number of documents that provide ethnographic texts for that culture (for details, see Table S1). The `r nrow(leader_text2)` text records from `r length(unique(documents$d_ID))` unique documents describing `r length(unique(leader_text2$d_culture))` cultures were generally short, with a median word count of X, a mean of X, and standard deviation of X. The vast majority of text records pertained to male leadership (`r male_leader_pct`%) and very few pertained to female leadership (`r female_leader_pct`%), with some records not sex-specific.
+The geographic distribution of the cultures in our sample is displayed in Fig. 1, with cultures labeled by mode of subsistence and represented by a symbol proportional to the number of documents that provide ethnographic texts for that culture (for details, see Table S1). The `r nrow(leader_text2)` text records from `r length(unique(leadershipdata::documents$d_ID))` unique documents describing `r length(unique(leader_text2$d_culture))` cultures were generally short, with a median word count of X, a mean of X, and standard deviation of X. The vast majority of text records pertained to male leadership (`r male_leader_pct`%) and very few pertained to female leadership (`r female_leader_pct`%), with some records not sex-specific.
 
-NEED TO DISCUSS 1187 and split records. 
+<!-- NEED TO DISCUSS 1187 and split records.  -->
 
 ## Variable distributions
 
-For each of the X coded variables, we computed the percentage of text records that provided support, estimating standard errors using a binomial generalized linear mixed effects model with a random intercept for author nested within culture. See Figure \@ref(fig:varsupport).
+For each of the `r length(quality_vars) + length(function_vars) + length(leader_cost_vars) + length(leader_benefit_vars) + length(follower_benefit_vars) + length(follower_cost_vars)` coded variables (see Table X), we computed the percentage of text records that provided support, estimating standard errors using a binomial generalized linear mixed effects model with a random intercept for author nested within culture. See Figure \@ref(fig:varsupport).
 
-```{r varsupport, fig.width=15, fig.height=8, fig.cap="Support for each coded variable. Blue: percent of text records with evidence of support. Red: percent of cultures with evidence of support."}
+```{r varsupport, fig.width=15, fig.height=8, fig.cap="Support for each coded variable. Blue circles: percent of text records with evidence of support. Red triangles: percent of cultures with evidence of support."}
 plot.variable.support
 ```
 
+The most common *functions* leaders serve, which are documented in over 70% of cultures, are providing counsel or direction in follower's affairs, conflict resolution, and organizing various cooperative activities. Leaders also commonly provide social functions, serve as a representative in inter-group interactions, and provide context-specific leadership such as military command and in providing ritual services. In about half of the cultures sampled here leaders punish other group members, control economic systems, and are responsible for policy development. Notable infrequent functions identified here include controlling group movement and migrations. 
 
-Costs and benefits. See Figure \@ref(fig:varsupportcb).
+The most common *qualities* of leaders are being of high social status (documented in over 90% of cultures), being experienced or accomplished, and being described as knowledgeable or intelligent. Also, in about 70% of cultures leaders maintained coercive authority over followers. Strategic nepotism, generosity, and having a favorable personality are also common leader qualities, documented in over 50% of cultures. Notable infrequent qualities of leaders in these data include charisma and fairness. 
 
-```{r varsupportcb, echo=FALSE, warning=FALSE, message=F, fig.width=15, fig.height=8}
+Leaders are most commonly receiving benefits in the form of greater access to resources and increased social status. Recieving social services and mating benefits are also relatively frequent benefits of leadership cross-culturally. The costs follow the potential benefits and leaders stand to lose their high social status and greater access to resources. Followers on the other hand most commonly benefit from leadership systems through receiving resources and social services. Mating and fitness benefits are relatively rare for followers. Followers most frequently encur costs in the form of resources lost and in providing social services. For both leaders and followers, individuals stand to lose what they are able to gain. The clear differences lie in leaders' opportunities for increased social status and matting opportunities. See Figure \@ref(fig:varsupportcb).
+
+```{r varsupportcb, echo=FALSE, warning=FALSE, message=F, fig.width=15, fig.height=8, fig.cap="Support for each coded variable. Blue circles: percent of text records with evidence of support. Red triangles: percent of cultures with evidence of support."}
 plot.variable.support_costs_benefits
 ```
 
-## Principle components analysis
+## Principle components analyses
 
+A three-rank logistic PCA on the `r length(quality_vars)` coded leader quality variables with $m$ set at `r logpca_model_qualities$m` via cross-validation explained `r signif(logpca_model_qualities$prop_deviance_expl, 3)*100`% of the deviance and converged following `r logpca_model_qualities$iters` iterations. We draw on the first of the three leader quality components for interpretation and additional analyses and identify this component as a *Prestige vs. Dominance* measure. Low values on Leader qualities PC 1 (Prestige vs. Dominance) are strongly associated with the variables *Experienced/accomplished* and *Knowledgeable/intelligence* and moderately associated with *Oratory skill* and *Innovative*. High values are strongly associated with *Polygnous* and *Coercive authority* and moderately associated with *Many children* and *High quality spouse*. Therefore, the "dominance" side of the *Prestige vs. Dominance* component is also closely liked to reproduction. Measures of physical formidability and aggressiveness are also moderately associated with the "dominance" side of this component. See Figure \@ref(fig:qualitiesPCplot).  
+
+```{r qualitiesPCplot, fig.width=9, fig.height=6, fig.cap="Logistic PCA loadings of coded leader qualitiy variables on the first of three components."}
+qualities_component1_plot
+```
+
+Similarly, a three-rank logistic PCA on the `r length(function_vars)` coded leader function variables with $m$ set at `r logpca_model_functions$m` via cross-validation explained `r signif(logpca_model_functions$prop_deviance_expl, 3)*100`% of the deviance and converged following `r logpca_model_functions$iters` iterations. The first Leader functions component distinguishes between interpersonal mediation functions and group organizational and social functions, we define as a *Mediation vs. Organization* measures. Low values on Leader functions PC 1 (Mediation vs. Organization) are strongly associated with the variables *Resolve conflict* and *Provide counsel/direction* and moderately associated with *Political appointments* and *Punishment*, whereas high values are strongly associated with *Social functions* and *Organize cooperation* and moderately associated with *Ritual functions*. See Figure \@ref(fig:functionsPCplot).
+
+
+```{r functionsPCplot, fig.width=9, fig.height=6, fig.cap="Logistic PCA loadings of coded leader function variables on the first of three components."}
+functions_component1_plot
+```
+
+## Exploring population-level variation
+
+To explore potential population variation in the *Prestige vs. Dominance* leader qualities component and the *Mediation vs. Organization* leader functions component, we fit a series of hierarchical linear models at the text-level, using nested random effects of document within culture. 
+
+We rely on a modified classification of subsistence from the HRAF, collapsing “hunter-gatherers” and “primarily hunter-gatherers” into a single category, “huntergatherers,” and by collapsing “agro-pastoralists” and “pastoralists” into a single “pastoralists” category. We renamed the eHRAF’s “Other” subsistence category, which is applied to societies with various combinations of hunting, fishing, gathering, pastoralism, and horticulture or intensive agriculture, as “mixed.” This produced a subsistence classification with five groups: Hunter-gatherers, Pastoralists, Horticulturalists, Agriculturalists, and Mixed. We drew on the Standard Cross-Cultural Sample (SCCS) database [@murdock_standard_1969] for additional population-level measures, which scores 186 cultures on many qualitative or quantitative variables, such as kinship system, levels of male aggression, and social stratification. Fifty of these cultures are the same as, or very similar to, cultures in the PSF. 
 
 
 # Discussion
